fixed alignment of form

--- a/css/form.css
+++ b/css/form.css
@@ -4,8 +4,8 @@
   border: 1px solid #e2e2e2;
   width: 380px;
   height: 700px;
-  top: 18%;
-  left: 36%;
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 10px 20px 40px rgba(0, 0, 0, 0.3);
 }
 
